we got up to printing env vars in stub
Signed-off-by: Scott Weiss <scott.weiss@emc.com>

--- a/containers/compilers/includeos/cpp/Dockerfile.common
+++ b/containers/compilers/includeos/cpp/Dockerfile.common
@@ -9,8 +9,20 @@ RUN cd ~ && pwd && \
   git checkout 65ffb9c080bd93c676b4c64c34129c62af6fd710 && \
   git fetch --tags
 COPY patches/install.sh /root/IncludeOS/install.sh
+RUN cd ~ && pwd && \
+  cd IncludeOS && \
+  /bin/bash ./install.sh
+
+#Do it again sam
 COPY patches/unik.hpp /root/IncludeOS/api/platforms/unik.hpp
 COPY patches/unik.cpp /root/IncludeOS/src/platforms/unik.cpp
+RUN mkdir /root/IncludeOS/src/lib/ && \
+    cd /root/IncludeOS/src/lib/ && \
+    git clone https://github.com/includeos/mana && \
+    git clone https://github.com/includeos/json && \
+    cd json && \
+    git submodule update --init
+COPY patches/Makefile /root/IncludeOS/src/Makefile
 RUN cd ~ && pwd && \
   cd IncludeOS && \
   /bin/bash ./install.sh
