block service until stub finishes
Signed-off-by: Scott Weiss <scott.weiss@emc.com>

--- a/containers/compilers/includeos/cpp/Dockerfile.common
+++ b/containers/compilers/includeos/cpp/Dockerfile.common
@@ -3,26 +3,30 @@ MAINTAINER includeos.org
 RUN \
   apt-get update && \
   apt-get install -y bc git lsb-release sudo
+#clone & checkout dev
 RUN cd ~ && pwd && \
   git clone https://github.com/hioa-cs/IncludeOS.git && \
   cd IncludeOS && \
-  git checkout 65ffb9c080bd93c676b4c64c34129c62af6fd710 && \
+  git checkout 0681f147661f11b51bd3783349fece93d958fdea && \
   git fetch --tags
-COPY patches/install.sh /root/IncludeOS/install.sh
-RUN cd ~ && pwd && \
-  cd IncludeOS && \
-  /bin/bash ./install.sh
 
-#Do it again sam
-COPY patches/unik.hpp /root/IncludeOS/api/platforms/unik.hpp
-COPY patches/unik.cpp /root/IncludeOS/src/platforms/unik.cpp
+#Dependencies for unik.cpp
 RUN mkdir /root/IncludeOS/src/lib/ && \
     cd /root/IncludeOS/src/lib/ && \
     git clone https://github.com/includeos/mana && \
     git clone https://github.com/includeos/json && \
     cd json && \
     git submodule update --init
+
+#Patches
+COPY patches/install.sh /root/IncludeOS/install.sh
+COPY patches/unik.hpp /root/IncludeOS/api/platforms/unik.hpp
+COPY patches/unik.cpp /root/IncludeOS/src/platforms/unik.cpp
+COPY patches/os.cpp /root/IncludeOS/src/kernel/os.cpp
+COPY patches/os.hpp /root/IncludeOS/api/kernel/os.hpp
 COPY patches/Makefile /root/IncludeOS/src/Makefile
+
+#Install
 RUN cd ~ && pwd && \
   cd IncludeOS && \
   /bin/bash ./install.sh
